# onyx-octopus

./: .continuation.md  .gitignore  CLAUDE.md  CLI.md  Cargo.toml  IMPLEMENTATION.md  PUBLISHING.md  README.md  ROADMAP.md  TODO.md  debug_method_name.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: event_logger.py
.github/workflows/: build-manylinux.yml  publish.yml
docs/: README.md  SUMMARY.md
docs/api/: README.md  aggregate.md  event-store.md  event.md  user.md
docs/api/streaming/: README.md  event-streamer.md
docs/architecture/: README.md
docs/deployment/: MULTI_PACKAGE_PUBLISHING_SUMMARY.md  PUBLISHING.md  PUBLISHING_SUMMARY.md  README.md
docs/guides/: README.md  django-integration.md  fastapi-integration.md  microservices-integration.md  pandas-integration.md  quick-start.md
docs/issues/: bug-report.md
docs/performance/: README.md
docs/planning/: ROADMAP.md
docs/schemas/: README.md
docs/schemas/api-schemas/: aggregate.json  event-store.json  event.json  streaming.json
docs/security/: SECURITY_FEATURES_COMPLETED.md
docs/templates/: README.md  aggregate-template.py  projection-template.py  saga-template.py  testing-template.py
eventuali-api-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
eventuali-api-server/src/eventuali_api_server/: __init__.py  cli.py  config.py  main.py
eventuali-api-server/src/eventuali_api_server/dependencies/: __init__.py  database.py
eventuali-api-server/src/eventuali_api_server/models/: __init__.py  events.py
eventuali-api-server/src/eventuali_api_server/routes/: __init__.py  events.py  health.py
eventuali-api-server/tests/: __init__.py  test_config.py  test_events.py  test_main.py
eventuali-core/: Cargo.toml  build.rs  build_fixed.rs
eventuali-core/benches/: event_store_benchmarks.rs
eventuali-core/examples/: rust_streaming_demo.rs
eventuali-core/proto/: event.proto
eventuali-core/src/: aggregate.rs  error.rs  event.rs  lib.rs  proto.rs  streaming.rs
eventuali-core/src/observability/: correlation.rs  health.rs  logging.rs  metrics.rs  mod.rs  profiling.rs  telemetry.rs
eventuali-core/src/performance/: batch_processing.rs  batch_processing_stub.rs  caching.rs  compression.rs  connection_pool.rs  mod.rs  read_replicas.rs  wal_optimization.rs
eventuali-core/src/security/: audit.rs  encryption.rs  gdpr.rs  mod.rs  rbac.rs  retention.rs  signatures.rs  vulnerability.rs
eventuali-core/src/snapshot/: mod.rs  sqlite_store.rs
eventuali-core/src/store/: config.rs  mod.rs  postgres.rs  sqlite.rs  traits.rs
eventuali-core/src/tenancy/: configuration.rs  isolation.rs  manager.rs  metrics.rs  mod.rs  projections.rs  quota.rs  storage.rs  tenant.rs
eventuali-core/tests/: integration_test.rs  performance_test.rs  postgres_test.rs  streaming_test.rs
eventuali-mcp-server/: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
eventuali-mcp-server/src/eventuali_mcp_server/: __init__.py  client.py  main.py  models.py
eventuali-mcp-server/tests/: test_client.py  test_models.py
eventuali-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
eventuali-python/examples/: 29_penetration_testing.py  35_resource_quotas_comprehensive.py  35_resource_quotas_test.py  45_wal_optimization.py  47_read_replicas.py  48_caching_layers.py  49_advanced_compression.py  README.md
eventuali-python/python/eventuali/: __init__.py  cli.py  event_store.py  streaming.py
eventuali-python/python/eventuali/performance/: __init__.py
eventuali-python/src/: aggregate.rs  error.rs  event.rs  event_store.rs  lib.rs  observability.rs  performance.rs  security.rs  snapshot.rs  streaming.rs  tenancy.rs
eventuali-python/tests/: test_basic.py  test_comprehensive.py  test_custom_events.py
examples/: 01_basic_event_store.py  01_basic_event_store_simple.py  02_aggregate_lifecycle.py  03_error_handling.py  04_performance_testing.py  05_multi_aggregate_simple.py  06_event_versioning.py  07_custom_event_subclasses.py  07_saga_patterns.py  08_projections.py  09_cqrs_patterns.py  10_event_replay.py  11_distributed_events.py  12_microservices_integration.py  13_realtime_dashboards.py  14_production_monitoring.py  15_advanced_patterns.py  16_enterprise_features.py  17_cli_basic_operations.py  18_cli_database_management.py  19_cli_performance_monitoring.py  20_cli_production_workflow.py  21_aggregate_snapshots.py  21_aggregate_snapshots_simple.py  21_aggregate_snapshots_working.py  21_snapshots.py  22_event_encryption_at_rest.py  23_digital_signatures.py  24_comprehensive_audit_trail.py  24_integration_test.py  25_production_rbac.py  26_data_retention_policies.py  27_gdpr_compliance.py  28_vulnerability_scanning.py  30_tenant_isolation_architecture.py  31_tenant_aware_event_storage.py  32_tenant_scoped_projections.py  33_tenant_management_api.py  34_tenant_specific_configuration.py  35_resource_quotas.py  (+20 more)
scripts/: prepare-release.py  test-build.py
