[workspace]
resolver = "2"
members = [
    "eventuali-core",
    "eventuali-python"
]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"

[workspace.dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]

[workspace.dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true