[workspace]
resolver = "2"
members = [
    "eventuali-core",
    "eventuali-python"
]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"], default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Observability dependencies
opentelemetry = "0.23"
opentelemetry-otlp = "0.16"
opentelemetry_sdk = "0.23"
tracing-opentelemetry = "0.23"
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
log = "0.4"
tracing-log = "0.2"

# Profiling dependencies  
pprof = { version = "0.13", features = ["flamegraph"] }
criterion = "0.5"

[workspace.dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]

[workspace.dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true