[project]
name = "eventuali-api-server"
version = "0.0.0"
description = "FastAPI server for Eventuali event sourcing system with real-time streaming"
authors = [
    { name = "Primeval AI", email = "noreply@primevalai.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["eventuali", "event-sourcing", "fastapi", "sse", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "eventuali",
    "httpx>=0.24.0",
    "sse-starlette>=1.6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pydocstyle>=6.3.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/primevalai/eventuali-api-server"
Repository = "https://github.com/primevalai/eventuali-api-server"
Documentation = "https://github.com/primevalai/eventuali-api-server#readme"
"Bug Reports" = "https://github.com/primevalai/eventuali-api-server/issues"

[project.scripts]
eventuali-api-server = "eventuali_api_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eventuali_api_server"]

[tool.black]
line-length = 79
target-version = ['py38']

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]