[project]
name = "eventuali-mcp-server"
version = "0.0.0"
description = "MCP server and client for Eventuali event sourcing system with integrated API server"
authors = [
    { name = "Primeval AI", email = "noreply@primevalai.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "event-sourcing", "eventuali", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "eventuali",
    "uvicorn>=0.23.0",
    "eventuali-api-server",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pydocstyle>=6.3.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/primevalai/eventuali-mcp-server"
Repository = "https://github.com/primevalai/eventuali-mcp-server"
Documentation = "https://github.com/primevalai/eventuali-mcp-server#readme"
"Bug Reports" = "https://github.com/primevalai/eventuali-mcp-server/issues"

[project.scripts]
eventuali-mcp-server = "eventuali_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eventuali_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 79
target-version = ['py310']

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]