[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "eventuali"
description = "High-performance event sourcing library combining Rust performance with Python ease of use"
authors = [{name = "PrimevalAI", email = "info@primeval.ai"}]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["event-sourcing", "cqrs", "rust", "python", "performance"]
dependencies = [
    "pydantic>=2.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "typing-extensions>=4.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "requests>=2.32.4",
    "pyyaml>=6.0.2",
    "psutil>=7.0.0",
]
dynamic = ["version"]

[project.scripts]
eventuali = "eventuali.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/primevalai/eventuali"
Repository = "https://github.com/primevalai/eventuali"
Documentation = "https://github.com/primevalai/eventuali"

[tool.maturin]
python-source = "python"
module-name = "eventuali._eventuali"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "ruff>=0.12.8",
]
